--- a/packages/rrdom/package.json
+++ b/packages/rrdom/package.json
@@ -33,7 +33,8 @@
     "build": "yarn turbo run prepublish",
     "check-types": "tsc -noEmit",
     "test": "vitest run",
-    "test:watch": "vitest",
+    "test:watch": "vitest watch",
+    "test:update": "vitest run --update",
     "prepublish": "tsc -noEmit && vite build",
     "lint": "yarn eslint src/**/*.ts"
   },
@@ -45,6 +46,7 @@
     "@types/puppeteer": "^5.4.4",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
+    "@total-typescript/shoehorn": "^0.1.0",
     "eslint": "^8.15.0",
     "puppeteer": "^17.1.3",
     "typescript": "^5.4.5",
