--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "happy-dom": "^14.12.0",
     "markdownlint": "^0.25.1",
     "markdownlint-cli": "^0.31.1",
+    "@types/prettier": "2.7.3",
     "prettier": "2.8.4",
     "rollup-plugin-visualizer": "^5.12.0",
     "turbo": "^2.0.4",
