Add "types" field to fix error when using "moduleResolution": "NodeNext" (#1369)
* Add "types" field to fix error when using "moduleResolution": "NodeNext".

* Add changeset.

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -31,7 +31,8 @@
   "exports": {
     ".": {
       "import": "./dist/rrweb-types.js",
-      "require": "./dist/rrweb-types.umd.cjs"
+      "require": "./dist/rrweb-types.umd.cjs",
+      "types": "./dist/index.d.ts"
     }
   },
   "files": [
