--- a/packages/plugins/rrweb-plugin-sequential-id-replay/package.json
+++ b/packages/plugins/rrweb-plugin-sequential-id-replay/package.json
@@ -25,9 +25,9 @@
   ],
   "scripts": {
     "dev": "vite build --watch",
-    "build": "tsc -noEmit && vite build",
+    "build": "yarn turbo run prepublish",
     "check-types": "tsc -noEmit",
-    "prepublish": "npm run build"
+    "prepublish": "tsc -noEmit && vite build"
   },
   "repository": {
     "type": "git",
@@ -45,9 +45,9 @@
   "devDependencies": {
     "@amplitude/rrweb-plugin-sequential-id-record": "^2.0.0-alpha.24",
     "@amplitude/rrweb": "^2.0.0-alpha.24",
-    "typescript": "^4.7.3",
-    "vite": "^5.2.8",
-    "vite-plugin-dts": "^3.8.1"
+    "typescript": "^5.4.5",
+    "vite": "^5.3.1",
+    "vite-plugin-dts": "^3.9.1"
   },
   "peerDependencies": {
     "@amplitude/rrweb": "^2.0.0-alpha.24"
