add cross-env to retest command in packages/rrweb/package.json
Co-authored-by: Justin Halsall <Juice10@users.noreply.github.com>

--- a/packages/rrweb/package.json
+++ b/packages/rrweb/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "prepare": "npm run prepack",
     "prepack": "npm run build",
-    "retest": "PUPPETEER_HEADLESS=true yarn retest:headful",
+    "retest": "cross-env PUPPETEER_HEADLESS=true yarn retest:headful",
     "retest:headful": "vitest run --exclude test/benchmark",
     "build-and-test": "yarn build && yarn retest",
     "test:headless": "cross-env PUPPETEER_HEADLESS=true yarn build-and-test",
