Support top-layer <dialog> recording & replay (#1503)
* chore: its important to run `yarn build:all` before running `yarn dev`

* feat: trigger showModal from rrdom and rrweb

* feat: Add support for replaying modal and non modal dialog elements

* chore: Update dev script to remove CLEAR_DIST_DIR flag

* Get modal recording and replay working

* DRY up dialog test and dedupe snapshot images

* feat: Refactor dialog test to use updated attribute name

* feat: Update dialog test to include rr_open attribute

* chore: Add npm dependency happy-dom@14.12.0

* Add more test cases for dialog

* Clean up naming

* Refactor dialog open code

* Revert changed code that doesn't do anything

* Add documentation for unimplemented type

* chore: Remove unnecessary comments in dialog.test.ts

* rename rr_open to rr_openMode

* Replace todo with a skipped test

* Add better logging for CI

* Rename rr_openMode to rr_open_mode

rrdom downcases all attribute names which made `rr_openMode` tricky to deal with

* Remove unused images

* Move after iframe append based on @YunFeng0817's comment
https://github.com/rrweb-io/rrweb/pull/1503#discussion_r1666363931

* Remove redundant dialog handling from rrdom.

rrdom already handles dialog element creation it's self

* Rename variables for dialog handling in rrweb replay module

* Update packages/rrdom/src/document.ts

---------

Co-authored-by: Eoghan Murray <eoghan@getthere.ie>

--- a/turbo.json
+++ b/turbo.json
@@ -7,6 +7,7 @@
     "vite.config.defaults.ts",
     "tsconfig.json"
   ],
+  "globalPassThroughEnv": ["PUPPETEER_HEADLESS"],
   "tasks": {
     "prepublish": {
       "dependsOn": ["^prepublish", "//#references:update"],
@@ -20,17 +21,14 @@
       ]
     },
     "test": {
-      "dependsOn": ["^prepublish"],
-      "passThroughEnv": ["PUPPETEER_HEADLESS"]
+      "dependsOn": ["^prepublish"]
     },
     "test:watch": {
       "persistent": true,
-      "passThroughEnv": ["PUPPETEER_HEADLESS"],
       "cache": false
     },
     "test:update": {
-      "dependsOn": ["^prepublish"],
-      "passThroughEnv": ["PUPPETEER_HEADLESS"]
+      "dependsOn": ["^prepublish"]
     },
     "dev": {
       "dependsOn": ["prepublish", "^prepublish"],
