--- a/packages/rrweb/tsconfig.json
+++ b/packages/rrweb/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "../../tsconfig.base.json",
-  "include": ["src"],
+  "include": [
+    "src"
+  ],
   "compilerOptions": {
     "rootDir": "src",
     "tsBuildInfoFile": "./tsconfig.tsbuildinfo",
@@ -9,7 +11,6 @@
       "vite/client",
       "@types/dom-mediacapture-transform",
       "@types/offscreencanvas",
-
       // rrweb specific:
       /*
        * @see https://vitest.dev/config/#globals
@@ -18,7 +19,6 @@
        */
       "vitest/globals"
     ],
-
     // TODO: enable me in the future, this is quite a large project
     // at time of writing (April 2024) there are over 100 errors in rrweb
     "strict": false
@@ -32,6 +32,9 @@
     },
     {
       "path": "../rrweb-snapshot"
+    },
+    {
+      "path": "../utils"
     }
   ]
 }
