--- a/turbo.json
+++ b/turbo.json
@@ -37,7 +37,7 @@
     },
     "lint": {},
     "check-types": {
-      "dependsOn": ["//#references:update"]
+      "dependsOn": ["^prepublish"]
     },
     "//#references:update": {
       "inputs": ["packages/*/package.json", "packages/plugins/*/package.json"],
