--- a/packages/rrweb/package.json
+++ b/packages/rrweb/package.json
@@ -82,6 +82,7 @@
     "@amplitude/rrdom": "^2.0.0-alpha.24",
     "@amplitude/rrweb-types": "^2.0.0-alpha.24",
     "@amplitude/rrweb-snapshot": "^2.0.0-alpha.24",
+    "@amplitude/rrweb-utils": "^2.0.0-alpha.24",
     "@types/css-font-loading-module": "0.0.7",
     "@xstate/fsm": "^1.4.0",
     "base64-arraybuffer": "^1.0.1",
