--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -20,8 +20,10 @@
   "devDependencies": {
     "@rrweb/types": "^2.0.0-alpha.17",
     "@types/react-dom": "^18.0.6",
+    "@types/semver": "^7.5.8",
     "@types/webextension-polyfill": "^0.9.1",
     "@vitejs/plugin-react": "^4.2.1",
+    "semver": "^7.6.3",
     "type-fest": "^2.19.0",
     "vite": "^5.3.1",
     "vite-plugin-web-extension": "^4.1.3",
