Fix version in package.json to match what is in master

--- a/packages/rrweb/package.json
+++ b/packages/rrweb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pendo/rrweb",
-  "version": "2.0.0-alpha.17.dkindel",
+  "version": "2.0.0-alpha.17",
   "description": "record and replay the web",
   "scripts": {
     "prepare": "npm run prepack",
