Remove @pendo prefix from package.json name field

--- a/packages/record/tsconfig.json
+++ b/packages/record/tsconfig.json
@@ -1,8 +1,6 @@
 {
   "extends": "../../tsconfig.base.json",
-  "include": [
-    "src"
-  ],
+  "include": ["src"],
   "compilerOptions": {
     "rootDir": "src",
     "tsBuildInfoFile": "./tsconfig.tsbuildinfo"
@@ -10,6 +8,9 @@
   "references": [
     {
       "path": "../types"
+    },
+    {
+      "path": "../rrweb"
     }
   ]
 }
