--- a/packages/all/tsconfig.json
+++ b/packages/all/tsconfig.json
@@ -1,8 +1,6 @@
 {
   "extends": "../../tsconfig.base.json",
-  "include": [
-    "src"
-  ],
+  "include": ["src"],
   "compilerOptions": {
     "rootDir": "src",
     "tsBuildInfoFile": "./tsconfig.tsbuildinfo"
@@ -13,6 +11,9 @@
     },
     {
       "path": "../packer"
+    },
+    {
+      "path": "../rrweb"
     }
   ]
 }
