--- a/packages/plugins/rrweb-plugin-sequential-id-record/tsconfig.json
+++ b/packages/plugins/rrweb-plugin-sequential-id-record/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "extends": "../../../tsconfig.base.json",
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "vite.config.ts"
-  ],
+  "include": ["src"],
+  "exclude": ["vite.config.ts"],
   "compilerOptions": {
     "rootDir": "src",
     "tsBuildInfoFile": "./tsconfig.tsbuildinfo"
   },
-  "references": []
+  "references": [
+    {
+      "path": "../../rrweb"
+    }
+  ]
 }
