--- a/packages/plugins/rrweb-plugin-sequential-id-replay/tsconfig.json
+++ b/packages/plugins/rrweb-plugin-sequential-id-replay/tsconfig.json
@@ -1,13 +1,7 @@
 {
   "extends": "../../../tsconfig.base.json",
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "vite.config.ts",
-    "dist",
-    "tsconfig.json"
-  ],
+  "include": ["src"],
+  "exclude": ["vite.config.ts", "dist", "tsconfig.json"],
   "compilerOptions": {
     "rootDir": ".",
     "tsBuildInfoFile": "./tsconfig.tsbuildinfo"
@@ -15,6 +9,9 @@
   "references": [
     {
       "path": "../rrweb-plugin-sequential-id-record"
+    },
+    {
+      "path": "../../rrweb"
     }
   ]
 }
