Revert "Rrweb sync alpha 12"

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -31,8 +31,7 @@
   "exports": {
     ".": {
       "import": "./dist/rrweb-types.js",
-      "require": "./dist/rrweb-types.umd.cjs",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/rrweb-types.umd.cjs"
     }
   },
   "files": [
