--- a/packages/packer/package.json
+++ b/packages/packer/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@rrweb/packer",
-  "version": "2.0.0-alpha.14",
+  "name": "@amplitude/rrweb-packer",
+  "version": "2.0.0-alpha.24",
   "publishConfig": {
     "access": "public"
   },
@@ -78,7 +78,7 @@
   },
   "dependencies": {
     "fflate": "^0.4.4",
-    "@rrweb/types": "^2.0.0-alpha.14"
+    "@amplitude/rrweb-types": "^2.0.0-alpha.24"
   },
   "browserslist": [
     "supports es6-class"
