--- a/packages/replay/package.json
+++ b/packages/replay/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@rrweb/replay",
-  "version": "2.0.0-alpha.14",
+  "name": "@amplitude/rrweb-replay",
+  "version": "2.0.0-alpha.24",
   "publishConfig": {
     "access": "public"
   },
@@ -56,8 +56,8 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
-    "@rrweb/types": "^2.0.0-alpha.14",
-    "rrweb": "^2.0.0-alpha.14"
+    "@amplitude/rrweb-types": "^2.0.0-alpha.24",
+    "@amplitude/rrweb": "^2.0.0-alpha.24"
   },
   "browserslist": [
     "supports es6-class"
