chore(rrweb): Fixed build issues

--- a/packages/plugins/rrweb-plugin-canvas-webrtc-replay/tsconfig.json
+++ b/packages/plugins/rrweb-plugin-canvas-webrtc-replay/tsconfig.json
@@ -10,5 +10,9 @@
     "rootDir": "src",
     "tsBuildInfoFile": "./tsconfig.tsbuildinfo"
   },
-  "references": []
+  "references": [
+    {
+      "path": "../../rrweb"
+    }
+  ]
 }
