--- a/packages/plugins/rrweb-plugin-canvas-webrtc-replay/package.json
+++ b/packages/plugins/rrweb-plugin-canvas-webrtc-replay/package.json
@@ -43,12 +43,12 @@
   },
   "homepage": "https://github.com/rrweb-io/rrweb#readme",
   "devDependencies": {
-    "rrweb": "^2.0.0-alpha.24",
+    "@amplitude/rrweb": "^2.0.0-alpha.24",
     "typescript": "^4.7.3",
     "vite": "^5.2.8",
     "vite-plugin-dts": "^3.8.1"
   },
   "peerDependencies": {
-    "rrweb": "^2.0.0-alpha.24"
+    "@amplitude/rrweb": "^2.0.0-alpha.24"
   }
 }
