--- a/packages/rrdom-nodejs/package.json
+++ b/packages/rrdom-nodejs/package.json
@@ -54,7 +54,7 @@
   "dependencies": {
     "cssom": "^0.5.0",
     "cssstyle": "^2.3.0",
-    "nwsapi": "^2.2.0",
+    "nwsapi": "2.2.0",
     "@amplitude/rrdom": "^2.0.0-alpha.24",
     "@amplitude/rrweb-snapshot": "^2.0.0-alpha.24"
   }
