chore(rrweb): tsconfig for rrweb-snpashot

--- a/packages/rrweb-snapshot/tsconfig.json
+++ b/packages/rrweb-snapshot/tsconfig.json
@@ -12,5 +12,9 @@
     "rootDir": "src",
     "tsBuildInfoFile": "./tsconfig.tsbuildinfo"
   },
-  "references": []
+  "references": [
+    {
+      "path": "../utils"
+    }
+  ]
 }
