--- a/packages/web-extension/src/manifest.json
+++ b/packages/web-extension/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "common": {
-    "name": "rrweb",
+    "name": "hovr",
     "content_scripts": [
       {
         "matches": ["<all_urls>"],
@@ -24,7 +24,7 @@
         "scripts": ["background/index.ts"]
       },
       "browser_action": {
-        "default_title": "rrweb extension",
+        "default_title": "hovr extension",
         "default_popup": "popup/popup.html",
         "browser_style": false
       },
@@ -39,7 +39,7 @@
     "firefox": {
       "browser_specific_settings": {
         "gecko": {
-          "id": "rrweb@rrweb.io",
+          "id": "hovr@hovr.io",
           "strict_min_version": "42.0"
         }
       }
@@ -53,7 +53,7 @@
         "type": "module"
       },
       "action": {
-        "default_title": "rrweb extension",
+        "default_title": "hovr extension",
         "default_popup": "popup/popup.html",
         "browser_style": false
       },
