--- a/packages/web-extension/src/manifest.json
+++ b/packages/web-extension/src/manifest.json
@@ -1,74 +1,48 @@
 {
-  "common": {
-    "name": "hovr",
-    "content_scripts": [
-      {
-        "matches": ["<all_urls>"],
-        "js": ["content/index.ts"],
-        "all_frames": true,
-        "run_at": "document_idle"
-      }
-    ],
-    "icons": {
-      "16": "icon16.png",
-      "48": "icon48.png",
-      "128": "icon128.png"
-    },
-    "permissions": ["activeTab", "tabs", "storage", "unlimitedStorage"]
-  },
-  "v2": {
-    "common": {
-      "manifest_version": 2,
-      "background": {
-        "persistent": false,
-        "scripts": ["background/index.ts"]
-      },
-      "browser_action": {
-        "default_title": "hovr extension",
-        "default_popup": "popup/popup.html",
-        "browser_style": false
-      },
-      "options_ui": {
-        "page": "options/index.html",
-        "open_in_tab": true,
-        "chrome_style": false
-      },
-      "web_accessible_resources": ["**/*.js"]
-    },
-    "chrome": {},
-    "firefox": {
-      "browser_specific_settings": {
-        "gecko": {
-          "id": "hovr@hovr.io",
-          "strict_min_version": "42.0"
-        }
-      }
+  "name": "hovr",
+  "manifest_version": 3,
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content/index.ts"],
+      "all_frames": true,
+      "run_at": "document_idle"
     }
+  ],
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
   },
-  "v3": {
-    "common": {
-      "manifest_version": 3,
-      "background": {
-        "service_worker": "background/index.ts",
-        "type": "module"
-      },
-      "action": {
-        "default_title": "hovr extension",
-        "default_popup": "popup/popup.html",
-        "browser_style": false
-      },
-      "options_ui": {
-        "page": "options/index.html",
-        "open_in_tab": true
-      },
-      "web_accessible_resources": [
-        {
-          "resources": ["**/*.js"],
-          "matches": ["<all_urls>"]
-        }
-      ]
-    },
-    "chrome": {},
-    "firefox": {}
+  "permissions": [
+    "activeTab",
+    "tabs",
+    "storage",
+    "unlimitedStorage"
+  ],
+  "host_permissions": [
+    "<all_urls>"
+  ],
+  "background": {
+    "service_worker": "background/index.ts",
+    "type": "module"
+  },
+  "action": {
+    "default_title": "hovr extension",
+    "default_popup": "popup/popup.html",
+    "browser_style": false
+  },
+  "options_ui": {
+    "page": "options/index.html",
+    "open_in_tab": true
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["**/*.js"],
+      "matches": ["<all_urls>"]
+    }
+  ],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
   }
 }
