--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -46,6 +46,6 @@ jobs:
         if: success()
         with:
           install-script: "yarn install --frozen-lockfile"
-          build-script: 'NODE_OPTIONS='--max-old-space-size=4096' yarn build:all'
-          compression: 'none'
-          pattern: '**/dist/*.js'
+          build-script: "NODE_OPTIONS='--max-old-space-size=4096' yarn build:all"
+          compression: "none"
+          pattern: "**/dist/*.js"
