--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@rrweb/types": "^2.0.0-alpha.18",
+    "@types/chrome": "^0.0.287",
     "@types/react-dom": "^18.0.6",
     "@types/semver": "^7.5.8",
     "@types/webextension-polyfill": "^0.9.1",
