--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,8 @@ jobs:
         if: steps.changesets.outputs.published == 'true'
         run: NODE_OPTIONS='--max-old-space-size=4096' DISABLE_WORKER_INLINING=true yarn turbo run prepublish --filter=@rrweb/web-extension
 
-      - uses: mnao305/chrome-extension-upload@v5.0.0
+      - name: Publish Chrome Extension
+        uses: mnao305/chrome-extension-upload@v5.0.0
         if: steps.changesets.outputs.published == 'true'
         with:
           extension-id: 'pdaldeopoccdhlkabbkcjmecmmoninhe'
