--- a/packages/rrweb-cutter/tsconfig.json
+++ b/packages/rrweb-cutter/tsconfig.json
@@ -1,39 +1,23 @@
 {
+  "extends": "../../tsconfig.base.json",
+  "include": ["src"],
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "dist",
-    "declaration": true,
-    "declarationDir": "dist/types",
-    "target": "ES5",
-    "module": "commonjs",
-    "lib": ["ES6", "DOM"],
-    "moduleResolution": "Node",
-    "sourceMap": true,
-    "strictNullChecks": true,
-    "removeComments": true,
-    "preserveConstEnums": true,
-    "resolveJsonModule": true,
-    "isolatedModules": false,
-    "esModuleInterop": true,
-    "noImplicitReturns": true,
-    "noImplicitAny": true,
-    "skipLibCheck": true
+    "tsBuildInfoFile": "./tsconfig.tsbuildinfo"
   },
-  "compileOnSave": true,
-  "include": ["src"],
-  "exclude": ["test"],
   "references": [
     {
       "path": "../types"
     },
     {
-      "path": "../rrdom"
+      "path": "../rrweb-snapshot"
     },
     {
-      "path": "../rrweb-snapshot"
+      "path": "../rrdom"
     },
     {
       "path": "../rrweb"
     }
   ]
 }
+
