--- a/packages/rrweb-player/.svelte-kit/tsconfig.json
+++ b/packages/rrweb-player/.svelte-kit/tsconfig.json
@@ -33,10 +33,7 @@
 	"exclude": [
 		"../node_modules/**",
 		"../src/service-worker.js",
-		"../src/service-worker/**/*.js",
 		"../src/service-worker.ts",
-		"../src/service-worker/**/*.ts",
-		"../src/service-worker.d.ts",
-		"../src/service-worker/**/*.d.ts"
+		"../src/service-worker.d.ts"
 	]
 }
