--- a/packages/plugins/rrweb-plugin-console-record/package.json
+++ b/packages/plugins/rrweb-plugin-console-record/package.json
@@ -50,7 +50,7 @@
     "vite": "^5.3.1",
     "vite-plugin-dts": "^3.9.1",
     "vitest": "^1.4.0",
-    "puppeteer": "^20.9.0"
+    "puppeteer": "^22.13.1",
   },
   "peerDependencies": {
     "rrweb": "^2.0.0-alpha.18"
