chore: maintain CSS output file name in vite@6.0.1
Without this change, build would fail because the produced stylesheet assumes
the `package.json['name']` i.e., `styles/rrweb.css`. To maintain the existing
behavior, these changes are required.

See https://vite.dev/guide/migration.html#customize-css-output-file-name-in-library-mode

--- a/packages/rrweb/package.json
+++ b/packages/rrweb/package.json
@@ -45,6 +45,7 @@
         "default": "./dist/rrweb.cjs"
       }
     },
+    "./dist/rrweb.css": "./dist/rrweb.css",
     "./dist/style.css": "./dist/style.css"
   },
   "files": [
