Handle image loading with crossOrigin correctly in rrweb-snapshot (#1)
* fix: handle image loading with crossOrigin correctly

* Bump version

* Bump version

* Bump version

* Bump version

* Fix repo links

* Update package.json

* Update workflows

* Update package.json

* Update snapshot.ts

* Update snapshot.ts

* Snapshot patch (#2)

* Update style-check.yml

* Update integration.test.ts

* Apply formatting changes

* Update snapshot.ts

* Delete .changeset/eslint-camelcase-devonly.md

* Update .eslintrc.js

* Update package.json

* Update snapshot.ts

* Apply formatting changes

* Modify tests

* Update snapshot.ts

* Update test

* Apply formatting changes

* Update snapshot.ts

* Apply formatting changes

* Update snapshot.ts

* Apply formatting changes

* Update snapshot.ts

* Apply formatting changes

* Update snapshot.ts

* Update snapshot.ts

* Apply formatting changes

* Update integration.test.ts

* Update integration.test.ts

* Update snapshot.ts

* Update style-check.yml

* Update style-check.yml

* Update snapshot.ts

* Apply formatting changes

* Update snapshot.ts

* Apply formatting changes

* Update snapshot.ts

* Apply formatting changes

* Update snapshot.ts

* Update integration.test.ts

* Update snapshot.ts

* Update snapshot.ts

* Update integration.test.ts

* Update snapshot.ts

* Update snapshot.ts

* Apply formatting changes

* Update snapshot.ts

* Apply formatting changes

* Update snapshot.ts

* Apply formatting changes

* Update snapshot.ts

* Apply formatting changes

* Update style-check.yml

---------

Co-authored-by: gnpaone <gnpaone@users.noreply.github.com>

---------

Co-authored-by: gnpaone <gnpaone@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "@rrweb/_monorepo",
   "description": "record and replay the web",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
+  },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/rrweb-io/rrweb.git"
+    "url": "git+ssh://git@github.com/Midpath-Software/rrweb.git"
   },
   "keywords": [
     "rrweb"
   ],
-  "author": "yanzhen@smartx.com",
+  "author": "gnpaone@gmail.com",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/rrweb-io/rrweb/issues"
+    "url": "https://github.com/Midpath-Software/rrweb/issues"
   },
   "private": true,
-  "homepage": "https://github.com/rrweb-io/rrweb#readme",
+  "homepage": "https://github.com/Midpath-Software/rrweb#readme",
   "workspaces": [
     "packages/*",
     "packages/plugins/*"
@@ -53,8 +57,8 @@
     "dev": "yarn turbo run dev --concurrency=18",
     "repl": "cd packages/rrweb && npm run repl",
     "live-stream": "cd packages/rrweb && yarn live-stream",
-    "lint": "yarn run concurrently --success=all -r -m=1 'yarn run markdownlint docs' 'ESLINT_USE_FLAT_CONFIG=false yarn eslint packages/*/src --ext .ts,.tsx,.js,.jsx,.svelte'",
-    "lint:report": "ESLINT_USE_FLAT_CONFIG=false yarn eslint --output-file eslint_report.json --format json packages/*/src --ext .ts,.tsx,.js,.jsx",
+    "lint": "yarn run concurrently --success=all -r -m=1 'yarn run markdownlint docs' 'yarn eslint packages/*/src --ext .ts,.tsx,.js,.jsx,.svelte'",
+    "lint:report": "yarn eslint --output-file eslint_report.json --format json packages/*/src --ext .ts,.tsx,.js,.jsx",
     "release": "yarn build:all && changeset publish"
   },
   "resolutions": {
@@ -65,5 +69,5 @@
     "defaults",
     "not op_mini all"
   ],
-  "packageManager": "yarn@1.22.19"
+  "packageManager": "yarn@1.22.22"
 }
