--- a/packages/replay/package.json
+++ b/packages/replay/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@rrweb/replay",
-  "version": "2.0.0-alpha.18",
+  "version": "2.0.1-alpha.18",
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
   },
   "keywords": [
     "rrweb",
@@ -17,13 +18,13 @@
     "prepublish": "tsc -noEmit && vite build",
     "lint": "yarn eslint src/**/*.ts"
   },
-  "homepage": "https://github.com/rrweb-io/rrweb/tree/main/packages/@rrweb/replay#readme",
+  "homepage": "https://github.com/Midpath-Software/rrweb/tree/main/packages/@rrweb/replay#readme",
   "bugs": {
-    "url": "https://github.com/rrweb-io/rrweb/issues"
+    "url": "https://github.com/Midpath-Software/rrweb/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rrweb-io/rrweb.git"
+    "url": "git+https://github.com/Midpath-Software/rrweb.git"
   },
   "license": "MIT",
   "type": "module",
@@ -56,8 +57,8 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@rrweb/types": "^2.0.0-alpha.18",
-    "rrweb": "^2.0.0-alpha.18"
+    "@rrweb/types": "^2.0.1-alpha.18",
+    "rrweb": "^2.0.1-alpha.18"
   },
   "browserslist": [
     "supports es6-class"
