--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@rrweb/types",
-  "version": "2.0.0-alpha.18",
+  "version": "2.0.1-alpha.18",
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
   },
   "keywords": [
     "rrweb",
@@ -15,13 +16,13 @@
     "prepublish": "tsc -noEmit && vite build",
     "lint": "yarn eslint src/**/*.ts"
   },
-  "homepage": "https://github.com/rrweb-io/rrweb/tree/main/packages/@rrweb/types#readme",
+  "homepage": "https://github.com/Midpath-Software/rrweb/tree/main/packages/@rrweb/types#readme",
   "bugs": {
-    "url": "https://github.com/rrweb-io/rrweb/issues"
+    "url": "https://github.com/Midpath-Software/rrweb/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rrweb-io/rrweb.git"
+    "url": "git+https://github.com/Midpath-Software/rrweb.git"
   },
   "license": "MIT",
   "type": "module",
