--- a/.github/workflows/style-check.yml
+++ b/.github/workflows/style-check.yml
@@ -35,7 +35,7 @@ jobs:
 
   annotation:
     # Skip the annotation action in push events
-    if: github.event_name == 'pull_request_target'
+    if: github.event_name == 'pull_request_target' && github.event.pull_request.head.repo.full_name != 'Midpath-Software/rrweb'
     needs: eslint_check_upload
     runs-on: ubuntu-latest
     name: ESLint Annotation
@@ -48,10 +48,11 @@ jobs:
         with:
           repo-token: '${{ secrets.GITHUB_TOKEN }}'
           report-json: 'eslint_report.json'
+          markdown-report-on-step-summary: true
 
   prettier_check:
     # In the forked PR, it's hard to format code and push to the branch directly, so the action only check the format correctness.
-    if: github.event_name != 'push' && github.event.pull_request.head.repo.full_name != 'rrweb-io/rrweb'
+    if: github.event_name != 'push' && github.event.pull_request.head.repo.full_name != 'Midpath-Software/rrweb'
     runs-on: ubuntu-latest
     name: Format Check
     steps:
@@ -71,7 +72,7 @@ jobs:
 
   prettier:
     # Skip the format code action in forked PRs
-    if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name == 'rrweb-io/rrweb'
+    if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name == 'Midpath-Software/rrweb'
     runs-on: ubuntu-latest
     name: Format Code
     steps:
