--- a/packages/rrdom-nodejs/package.json
+++ b/packages/rrdom-nodejs/package.json
@@ -1,6 +1,14 @@
 {
   "name": "rrdom-nodejs",
-  "version": "2.0.0-alpha.18",
+  "version": "2.0.1-alpha.18",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Midpath-Software/rrweb.git"
+  },
   "scripts": {
     "dev": "vite build --watch",
     "build": "yarn turbo run prepublish",
@@ -55,7 +63,7 @@
     "cssom": "^0.5.0",
     "cssstyle": "^2.3.0",
     "nwsapi": "2.2.0",
-    "rrdom": "^2.0.0-alpha.18",
-    "@rrweb/types": "^2.0.0-alpha.18"
+    "rrdom": "^2.0.1-alpha.18",
+    "@rrweb/types": "^2.0.1-alpha.18"
   }
 }
