--- a/packages/rrdom/package.json
+++ b/packages/rrdom/package.json
@@ -1,7 +1,11 @@
 {
   "name": "rrdom",
-  "version": "2.0.0-alpha.18",
-  "homepage": "https://github.com/rrweb-io/rrweb/tree/main/packages/rrdom#readme",
+  "version": "2.0.1-alpha.18",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
+  },
+  "homepage": "https://github.com/Midpath-Software/rrweb/tree/main/packages/rrdom#readme",
   "license": "MIT",
   "type": "module",
   "main": "./dist/rrdom.cjs",
@@ -26,7 +30,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rrweb-io/rrweb.git"
+    "url": "git+https://github.com/Midpath-Software/rrweb.git"
   },
   "scripts": {
     "dev": "vite build --watch",
@@ -38,10 +42,10 @@
     "lint": "yarn eslint src/**/*.ts"
   },
   "bugs": {
-    "url": "https://github.com/rrweb-io/rrweb/issues"
+    "url": "https://github.com/Midpath-Software/rrweb/issues"
   },
   "devDependencies": {
-    "@rrweb/types": "^2.0.0-alpha.18",
+    "@rrweb/types": "^2.0.1-alpha.18",
     "@types/puppeteer": "^5.4.4",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
@@ -52,6 +56,6 @@
     "vite-plugin-dts": "^3.9.1"
   },
   "dependencies": {
-    "rrweb-snapshot": "^2.0.0-alpha.18"
+    "rrweb-snapshot": "^2.0.1-alpha.18"
   }
 }
