--- a/packages/rrvideo/package.json
+++ b/packages/rrvideo/package.json
@@ -1,6 +1,14 @@
 {
   "name": "rrvideo",
-  "version": "2.0.0-alpha.18",
+  "version": "2.0.1-alpha.18",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Midpath-Software/rrweb.git"
+  },
   "description": "transform rrweb session into video",
   "main": "build/index.js",
   "bin": {
@@ -18,7 +26,7 @@
     "check-types": "tsc -noEmit",
     "prepublish": "yarn build"
   },
-  "author": "yanzhen@smartx.com",
+  "author": "gnpaone@gmail.com",
   "license": "MIT",
   "devDependencies": {
     "@types/fs-extra": "11.0.1",
@@ -27,13 +35,13 @@
     "@types/node": "^18.15.11",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.3",
-    "@rrweb/types": "^2.0.0-alpha.18"
+    "@rrweb/types": "^2.0.1-alpha.18"
   },
   "dependencies": {
     "@open-tech-world/cli-progress-bar": "^2.0.2",
     "fs-extra": "^11.1.1",
     "minimist": "^1.2.5",
     "playwright": "^1.32.1",
-    "rrweb-player": "^2.0.0-alpha.18"
+    "rrweb-player": "^2.0.1-alpha.18"
   }
 }
