--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,9 +22,14 @@ jobs:
           cache: 'yarn'
 
       - name: Install Dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: Set registry settings
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           npm config set registry https://npm.pkg.github.com
-          yarn install --frozen-lockfile
+          echo "//npm.pkg.github.com/:_authToken=$GITHUB_TOKEN" > "$HOME/.npmrc"
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
@@ -34,4 +39,3 @@ jobs:
         env:
           NODE_OPTIONS: '--max-old-space-size=4096'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
