--- a/.github/workflows/style-check.yml
+++ b/.github/workflows/style-check.yml
@@ -5,7 +5,8 @@ on: [push, pull_request_target]
 jobs:
   eslint_check_upload:
     runs-on: ubuntu-latest
-    permissions: read-all
+    permissions:
+      contents: read
     name: ESLint Check and Report Upload
 
     steps:
@@ -55,7 +56,8 @@ jobs:
   prettier_check:
     # In the forked PR, it's hard to format code and push to the branch directly, so the action only check the format correctness.
     if: github.event_name != 'push' && github.event.pull_request.head.repo.full_name != 'rrweb-io/rrweb'
-    permissions: read-all
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
     name: Format Check
     steps:
